--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,7 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+WindowInjection/img.py
+WindowInjection/img.png
+WindowInjection/Untitled.png
+WindowInjection/Untitled.py
